# serializer version: 1
# name: test_all_entities[sensor.focused_einstein_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.focused_einstein_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_focused_einstein_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.focused_einstein_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'focused_einstein Image',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.focused_einstein_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/redis:7',
  })
# ---
# name: test_all_entities[sensor.funny_chatelet_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.funny_chatelet_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_funny_chatelet_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.funny_chatelet_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'funny_chatelet Image',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.funny_chatelet_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/ubuntu:latest',
  })
# ---
# name: test_all_entities[sensor.my_environment_api_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_api_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'API Version',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'api_version',
    'unique_id': 'portainer_test_entry_123_1_api_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_api_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment API Version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_api_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.40',
  })
# ---
# name: test_all_entities[sensor.my_environment_architecture-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_architecture',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Architecture',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'architecture',
    'unique_id': 'portainer_test_entry_123_1_architecture',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_architecture-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Architecture',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_architecture',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'x86_64',
  })
# ---
# name: test_all_entities[sensor.my_environment_container_count-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_container_count',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Container Count',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'containers_count',
    'unique_id': 'portainer_test_entry_123_1_containers_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_container_count-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Container Count',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_container_count',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '14',
  })
# ---
# name: test_all_entities[sensor.my_environment_containers_paused-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_containers_paused',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Containers Paused',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'containers_paused',
    'unique_id': 'portainer_test_entry_123_1_containers_paused',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_containers_paused-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Containers Paused',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_containers_paused',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[sensor.my_environment_containers_running-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_containers_running',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Containers Running',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'containers_running',
    'unique_id': 'portainer_test_entry_123_1_containers_running',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_containers_running-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Containers Running',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_containers_running',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_all_entities[sensor.my_environment_containers_stopped-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_containers_stopped',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Containers Stopped',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'containers_stopped',
    'unique_id': 'portainer_test_entry_123_1_containers_stopped',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_containers_stopped-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Containers Stopped',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_containers_stopped',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_all_entities[sensor.my_environment_cpu-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_cpu',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CPU',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cpu_total',
    'unique_id': 'portainer_test_entry_123_1_cpu_total',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_cpu-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment CPU',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_cpu',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_all_entities[sensor.my_environment_docker_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_docker_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Docker Version',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'docker_version',
    'unique_id': 'portainer_test_entry_123_1_docker_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_docker_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Docker Version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_docker_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.0.2',
  })
# ---
# name: test_all_entities[sensor.my_environment_image_count-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_image_count',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image Count',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'images_count',
    'unique_id': 'portainer_test_entry_123_1_images_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_image_count-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Image Count',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_image_count',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '508',
  })
# ---
# name: test_all_entities[sensor.my_environment_kernel_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_kernel_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Kernel Version',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'kernel_version',
    'unique_id': 'portainer_test_entry_123_1_kernel_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_kernel_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Kernel Version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_kernel_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.19.76-linuxkit',
  })
# ---
# name: test_all_entities[sensor.my_environment_operating_system-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_operating_system',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Operating System',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'operating_system',
    'unique_id': 'portainer_test_entry_123_1_operating_system',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_operating_system-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Operating System',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_operating_system',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'linux',
  })
# ---
# name: test_all_entities[sensor.my_environment_operating_system_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_operating_system_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Operating System Version',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'operating_system_version',
    'unique_id': 'portainer_test_entry_123_1_operating_system_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.my_environment_operating_system_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my-environment Operating System Version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_operating_system_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '16.04',
  })
# ---
# name: test_all_entities[sensor.my_environment_total_memory-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.my_environment_total_memory',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Total Memory',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'memory_total',
    'unique_id': 'portainer_test_entry_123_1_memory_total',
    'unit_of_measurement': <UnitOfInformation.BYTES: 'B'>,
  })
# ---
# name: test_all_entities[sensor.my_environment_total_memory-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'my-environment Total Memory',
      'unit_of_measurement': <UnitOfInformation.BYTES: 'B'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_environment_total_memory',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2095882240',
  })
# ---
# name: test_all_entities[sensor.practical_morse_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.practical_morse_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_practical_morse_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.practical_morse_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'practical_morse Image',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.practical_morse_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/python:3.13-slim',
  })
# ---
# name: test_all_entities[sensor.serene_banach_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.serene_banach_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_serene_banach_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.serene_banach_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'serene_banach Image',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.serene_banach_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/nginx:latest',
  })
# ---
# name: test_all_entities[sensor.stoic_turing_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.stoic_turing_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_stoic_turing_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.stoic_turing_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'stoic_turing Image',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.stoic_turing_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/postgres:15',
  })
# ---
